1.10.9: fix java 8.